--- a/style.css
+++ b/style.css
@@ -194,6 +194,11 @@ section {
   margin-bottom: 1rem;
 }
 
+.text-container {
+  font-size: 1.20rem;
+  text-align: center;
+}
+
 .title {
   font-size: 3rem;
   text-align: center;
@@ -231,7 +236,7 @@ section {
 
 .btn-color-1,
 .btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
+  border: rgb(125, 76, 194) 0.1rem solid;
 }
 
 .btn-color-1:hover,
@@ -241,7 +246,7 @@ section {
 
 .btn-color-1,
 .btn-color-2:hover {
-  background: rgb(53, 53, 53);
+  background: rgb(207, 184, 240);
   color: white;
 }
 
@@ -298,8 +303,8 @@ section {
   flex: 1;
   background: white;
   border-radius: 2rem;
-  border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  border: rgb(53, 53, 53) 0.2rem solid;
+  border-color: rgb(125, 76, 194);
   text-align: center;
 }
 
@@ -321,7 +326,7 @@ section {
 }
 
 .experience-sub-title {
-  color: rgb(85, 85, 85);
+  color: rgb(0, 0, 0);
   font-weight: 600;
   font-size: 1.75rem;
   margin-bottom: 2rem;
@@ -360,7 +365,7 @@ article .icon {
 }
 
 .color-container {
-  border-color: rgb(163, 163, 163);
+  border-color: rgb(125, 76, 194);
   background: rgb(250, 250, 250);
 }
 
@@ -377,7 +382,7 @@ article .icon {
 
 .project-btn {
   color: black;
-  border-color: rgb(163, 163, 163);
+  border-color: rgb(207, 184, 240);
 }
 
 /* CONTACT */
@@ -394,7 +399,7 @@ article .icon {
   justify-content: center;
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
-  border-color: rgb(163, 163, 163);
+  border-color: rgb(125, 76, 194);
   background: (250, 250, 250);
   margin: 2rem auto;
   padding: 0.5rem;
